# ptd

./: .gitattributes  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  .roborev.toml  .snyk  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Justfile  README.md  accounts.env.example  envrc.recommended
.claude/: review-guidelines.md  settings.local.json
.github/: CODEOWNERS  pull_request_template.md
cmd/: README.md  admin.go  assume.go  attestation.go  config.go  eject.go  go.mod  (+14 more)
e2e/: conftest.py  pyproject.toml  test_example.py  test_flightdeck_home.py
python-pulumi/: .gitignore  Justfile  README.md  TESTING.md  conftest.py  pyproject.toml  ruff.toml
python-pulumi/src/ptd/: __init__.py  aws_accounts.py  aws_auth_user.py  aws_control_room.py  aws_control_session.py  aws_iam.py  aws_workload.py  azure_control_session.py  azure_roles.py  azure_sdk.py  azure_secrecy.py  azure_subscriptions.py  azure_workload.py  junkdrawer.py  oidc.py  paths.py  secrecy.py  shext.py  workload.py
python-pulumi/src/ptd/grafana_alerts/: applications.yaml  azure_loadbalancer.yaml  azure_netapp.yaml  azure_postgres.yaml  azure_storage.yaml  cloudwatch.yaml  healthchecks.yaml  loadbalancer.yaml  mimir.yaml  natgateway.yaml  nodes.yaml  pods.yaml  rds.yaml
python-pulumi/src/ptd/grafana_dashboards/: README.md  alerts_dashboard.json  k8s-views-global.json  posit-team-overview.json  posit_team_overview.json
python-pulumi/src/ptd/pulumi_resources/: __init__.py  aws_bastion.py  aws_bucket.py  aws_control_room_cluster.py  aws_control_room_persistent.py  aws_control_room_postgres_config.py  aws_control_room_workspaces.py  aws_directoryservice.py  aws_directoryservicedata.py  aws_eks_cluster.py  aws_fsx_openzfs_multi.py  aws_iam.py  aws_karpenter.py  aws_tailscale.py  aws_vpc.py  aws_workload_clusters.py  aws_workload_eks.py  aws_workload_helm.py  aws_workload_persistent.py  aws_workload_postgres_config.py  aws_workload_sites.py  azure_bastion.py  azure_files_csi.py  azure_traefik.py  azure_workload_clusters.py  azure_workload_helm.py  azure_workload_persistent.py  azure_workload_postgres_config.py  azure_workload_sites.py  cert_manager.py  custom_k8s_resources.py  external_dns.py  grafana_alloy.py  grafana_postgres_resources.py  helm_controller.py  keycloak_operator.py  kubernetes_role.py  lib.py  network_policies.py  team_operator.py  (+7 more)
python-pulumi/tests/: test_alb_tags.py  test_aws_iam.py  test_azure_alert_files.py  test_azure_alloy_identity.py  test_azure_bastion_config.py  test_azure_netapp_volumes.py  test_azure_secrecy.py  test_cloud_agnostic_infrastructure.py  test_dashboard_configmaps.py  test_eks_access_entries_simple_integration.py  test_eso_and_external_secret_values.py  test_grafana_alloy.py  test_junkdrawer.py  test_lib.py  test_nfs_subdir_provisioner_values.py  test_paths.py  test_pod_identity_agent_addon.py  test_pod_identity_associations.py  test_ptd_aws_workload_account.py  test_ptd_init.py  test_ptd_pulumi_resources_aws_bucket.py  test_ptd_pulumi_resources_aws_vpc.py  test_ptd_secrecy.py  test_shared_fixtures.py  test_stub_import_only.py  test_traefik_nlb_tags.py  test_vpc_endpoints.py  test_workload_cluster_config.py
(+292 files in other folders)
